src/test/resources/plugin/inline/errors/assert-negative.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(assert.failed:negative.permission)
    assert acc(falze(), -write)
}